`tsc --noEmit && prettier --check ."` and prettierignore geojson files

--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "dev": "vite",
     "build": "vite build",
     "prepare": "husky",
-    "test": "echo no tests"
+    "test": "prettier --check ."
   }
 }
