--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
@@ -14,6 +16,6 @@
     "dev": "vite",
     "build": "vite build",
     "prepare": "husky",
-    "test": "prettier --check ."
+    "test": "tsc --noEmit && prettier --check ."
   }
 }
