permission for github actions

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,6 +8,10 @@ jobs:
   publish:
     runs-on: ubuntu-latest
 
+    permissions:
+      id-token: write
+      pages: write
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
