--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -5,19 +5,14 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "reference/*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "reference/*" ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v4
