--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "prettier --check .",
+    "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build"
   },
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/kristiania-kws2100-2025/kws2100-kartbaserte-websystemer#readme",
   "description": "",
   "devDependencies": {
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
     "prettier": "^3.4.2",
+    "typescript": "^5.7.3",
     "vite": "^6.0.7"
   },
   "dependencies": {
