reproject map from kartverket

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vite": "^6.0.9"
   },
   "dependencies": {
+    "@types/proj4": "^2.5.6",
     "ol": "^10.3.1",
+    "proj4": "^2.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
