return schools as json from API from database

--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.6.20"
+    "hono": "^4.6.20",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.11",
     "tsx": "^4.19.2"
   }
 }
