get started with postgis

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "prepare": "husky",
+    "db:schools:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "build": "vite build"
   },
   "repository": {
