--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "tsx server.ts",
     "dev": "tsx --watch server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,10 +14,10 @@
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "hono": "^4.6.20",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11",
-    "tsx": "^4.19.2"
+    "@types/pg": "^8.11.11"
   }
 }
