--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
+    "start": "cd server && npm start",
     "prepare": "husky",
     "db:schools": "npm run db:schools:download && npm run db:schools:import",
     "db:schools:download": "download --extract --out tmp https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
