--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "prepare": "husky",
-    "build": "vite build"
+    "build": "vite build",
+    "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
+    "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Basisdata_0000_Norge_25833_Kommuner_PostGIS.zip",
+    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql,"
   },
   "repository": {
     "type": "git",
@@ -29,6 +33,7 @@
     "vite": "^6.1.1"
   },
   "dependencies": {
+    "download-cli": "^1.1.1",
     "ol": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
