--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "cd server && npm start",
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "prepare": "husky",
@@ -10,7 +11,8 @@
     "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Basisdata_0000_Norge_25833_Kommuner_PostGIS.zip",
     "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
-    "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql,"
+    "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "postinstall": "cd server && npm install --include=dev"
   },
   "repository": {
     "type": "git",
