--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx server.ts",
     "dev": "tsx --watch server.ts"
   },
   "keywords": [],
@@ -16,7 +16,7 @@
     "pg": "^8.13.3"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.11",
-    "tsx": "^4.19.3"
+    "tsx": "^4.19.3",
+    "@types/pg": "^8.11.11"
   }
 }
