define db:addresses scripts

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
     "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:addresses": "npm run db:addresses:download && npm run db:addresses:import",
+    "db:addresses:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenVegadresse/PostGIS/Basisdata_0000_Norge_25833_MatrikkelenVegadresse_PostGIS.zip",
+    "db:addresses:import": "docker exec -i /postgis /usr/bin/psql --user postgcres < tmp/Basisdata_0000_Norge_25833_MatrikkelenVegadresse_PostGIS.sql",
+    "db:addresses:heroku": "npm run db:addresses:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_MatrikkelenVegadresse_PostGIS.sql",
     "db:local:prepare": "docker exec -i /postgis /usr/bin/psql --user postgres < scripts/prepare-data.sql",
     "db:local": "npm run db:municipalities && npm db:prepare:local",
     "postinstall": "cd server && npm install --include=dev",
