--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "prepare": "husky",
-    "build": "vite build"
+    "build": "vite build",
+    "postinstall": "cd server && npm install --include=dev",
+    "start": "cd server && npm start"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   "homepage": "https://github.com/kristiania-kws2100-2025/kws2100-kartbaserte-websystemer#readme",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "husky": "^9.1.7",
