--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "prepare": "husky",
     "build": "vite build",
     "postinstall": "cd server && npm install --include=dev",
-    "start": "cd server && npm start"
+    "start": "cd server && npm start",
+    "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
+    "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
+    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql,"
   },
   "repository": {
     "type": "git",
@@ -32,6 +36,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "download-cli": "^1.1.1",
     "ol": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
