--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "build": "vite build",
     "postinstall": "cd server && npm install --include=dev",
     "start": "cd server && npm start",
-    "db:dev": "npm run db:municipalities && npm run db:prepare",
+    "db:dev": "npm run db:municipalities:dev && npm run db:addresses:dev && npm run db:prepare",
     "psql:docker": "docker exec -i /postgis /usr/bin/psql --user postgres",
     "db:prepare": "npm run psql:docker < scripts/prepare-database.sql",
-    "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
+    "db:addresses:dev": "npm run db:addresses:download && npm run psql:docker < tmp/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.sql",
+    "db:addresses:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenAdresse/PostGIS/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.zip",
+    "db:addresses:heroku": "npm run db:addresses:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.sql",
+    "db:municipalities:dev": "npm run db:municipalities:download && npm run psql:docker < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
-    "db:municipalities:import": "npm run psql:docker < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:heroku:prepare": "psql $DATABASE_URL < scripts/prepare-database.sql"
   },
