import, prepare, expose and show schools

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "postinstall": "cd server && npm install --include=dev",
     "start": "cd server && npm start",
     "db:dev": "npm run db:municipalities:dev && npm run db:addresses:dev && npm run db:prepare",
-    "psql:docker": "docker exec -i /postgis /usr/bin/psql --user postgres",
-    "db:prepare": "npm run psql:docker < scripts/prepare-database.sql",
-    "db:addresses:dev": "npm run db:addresses:download && npm run psql:docker < tmp/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.sql",
+    "psql:dev": "docker exec -i /postgis /usr/bin/psql --user postgres",
+    "db:prepare": "npm run psql:dev < scripts/prepare-database.sql",
     "db:addresses:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenAdresse/PostGIS/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.zip",
+    "db:addresses:dev": "npm run db:addresses:download && npm run psql:dev < tmp/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.sql",
     "db:addresses:heroku": "npm run db:addresses:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_MatrikkelenAdresse_PostGIS.sql",
-    "db:municipalities:dev": "npm run db:municipalities:download && npm run psql:docker < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
+    "db:schools:dev": "npm run db:schools:download && npm run psql:dev < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
+    "db:municipalities:dev": "npm run db:municipalities:download && npm run psql:dev < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:heroku:prepare": "psql $DATABASE_URL < scripts/prepare-database.sql"
   },
