--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
     "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:dev:prepare": "docker exec -i /postgis /usr/bin/psql --user postgres < scripts/prepare-database.sql",
     "db:heroku:prepare": "psql $DATABASE_URL < scripts/prepare-database.sql"
   },
   "repository": {
