--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "start": "cd server && npm start",
     "db:municipalities": "npm run db:municipalities:download && npm run db:municipalities:import",
     "db:municipalities:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Kommuner/POSTGIS/Basisdata_0000_Norge_25833_Kommuner_POSTGIS.zip",
-    "db:municipalities:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
+    "db:municipalities:import": "npm run psql:docker < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
     "db:municipalities:heroku": "npm run db:municipalities:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Kommuner_PostGIS.sql",
-    "db:dev:prepare": "docker exec -i /postgis /usr/bin/psql --user postgres < scripts/prepare-database.sql",
+    "db:addresses:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenVegadresse/PostGIS/Basisdata_0000_Norge_25833_MatrikkelenVegadresse_PostGIS.zip",
+    "db:addresses:import": "npm run psql:docker < tmp/Basisdata_0000_Norge_25833_MatrikkelenVegadresse_PostGIS.sql",
+    "psql:docker": "docker exec -i /postgis /usr/bin/psql --user postgres",
+    "db:dev:prepare": "npm run psql:docker < scripts/prepare-database.sql",
     "db:heroku:prepare": "psql $DATABASE_URL < scripts/prepare-database.sql"
   },
   "repository": {
