--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-  "name": "kws2100-kartbaserte-websystemer-dryrun",
+  "name": "reference-09",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build",
     "prepare": "husky"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kristiania-kws2100-2025/kws2100-kartbaserte-websystemer.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kristiania-kws2100-2025/kws2100-kartbaserte-websystemer/issues"
-  },
-  "homepage": "https://github.com/kristiania-kws2100-2025/kws2100-kartbaserte-websystemer#readme",
-  "description": "",
   "devDependencies": {
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
