--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "ol": "^10.4.0",
+    "ol-mapbox-style": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
