--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "protoc:win": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto.cmd --ts_proto_out=generated/ --ts_proto_opt=esModuleInterop=true ./gtfs-realtime.proto"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19.0.4",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
+    "ts-proto": "^2.6.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.2"
   },
