--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "prepare": "husky",
+    "postinstall": "cd server && npm install --include=dev",
+    "start": "cd server && npm start",
     "pg:exec:docker": "docker exec -i /postgis /usr/bin/psql --user postgres",
     "db:schools": "npm run db:schools:download && npm run db:schools:import",
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
