--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx --watch server.ts"
+    "dev": "tsx --watch server.ts",
+    "start": "tsx server.ts"
   },
   "keywords": [],
   "author": "",
