--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
     "db:schools:import": "npm run pg:exec:docker < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:fylker2023": "npm run db:fylker2023:download && npm run db:fylker2023:import",
-    "db:fylker2023:download": "download --extract --out tmp/ \"https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
+    "db:fylker2023:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
     "db:fylker2023:import": "npm run pg:exec:docker < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
-    "db:prepare": "npm run pg:exec:docker < scripts/prepare-db.sql"
+    "db:prepare": "npm run pg:exec:docker < scripts/prepare-db.sql",
+    "db:heroku": "npm run db:heroku:postgis && npm run db:schools:heroku && npm run db:fylker2023:heroku && npm run db:prepare:heroku",
+    "db:heroku:postgis": "echo 'create extension postgis' | psql $DATABASE_URL",
+    "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:fylker2023:heroku": "npm run db:fylker2023:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
+    "db:prepare:heroku": "psql $DATABASE_URL < scripts/prepare-db.sql"
   },
   "repository": {
     "type": "git",
