--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
-    "dev": "vite",
+    "dev": "concurrently vite npm:dev:server",
+    "dev:server": "cd server && npm run dev",
     "build": "vite build",
     "prepare": "husky",
     "postinstall": "cd server && npm install --include=dev",
     "start": "cd server && npm start",
     "pg:exec:docker": "docker exec -i /postgis /usr/bin/psql --user postgres",
-    "db:schools": "npm run db:schools:download && npm run db:schools:import",
+    "db:dev": "npm run db:schools:dev && npm run db:fylker2023:dev && npm run db:prepare",
+    "db:grunnkrets:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Grunnkretser/PostGIS/Basisdata_03_Oslo_25833_Grunnkretser_PostGIS.zip",
+    "db:grunnkrets:dev": "npm run db:grunnkrets:download && npm run pg:exec:docker < tmp/Basisdata_03_Oslo_25833_Grunnkretser_PostGIS.sql",
+    "db:grunnkrets:heroku": "npm run db:grunnkrets:download && psql $DATABASE_URL < tmp/Basisdata_03_Oslo_25833_Grunnkretser_PostGIS.sql",
+    "db:addresses:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenVegadresse/PostGIS/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.zip",
+    "db:addresses:dev": "npm run db:addresses:download && npm run pg:exec:docker < tmp/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.sql",
+    "db:addresses:heroku": "npm run db:addresses:download && psql $DATABASE_URL < tmp/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.sql",
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
-    "db:schools:import": "npm run pg:exec:docker < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
-    "db:fylker2023": "npm run db:fylker2023:download && npm run db:fylker2023:import",
+    "db:schools:dev": "npm run db:schools:download && npm run pg:exec:docker < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:fylker2023:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
-    "db:fylker2023:import": "npm run pg:exec:docker < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
+    "db:fylker2023:dev": "npm run db:fylker2023:download && npm run pg:exec:docker < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
+    "db:fylker2023:heroku": "npm run db:fylker2023:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:prepare": "npm run pg:exec:docker < scripts/prepare-db.sql",
     "db:heroku": "npm run db:heroku:postgis && npm run db:schools:heroku && npm run db:fylker2023:heroku && npm run db:prepare:heroku",
     "db:heroku:postgis": "echo 'create extension postgis' | psql $DATABASE_URL",
-    "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
-    "db:fylker2023:heroku": "npm run db:fylker2023:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:prepare:heroku": "psql $DATABASE_URL < scripts/prepare-db.sql"
   },
   "repository": {
@@ -38,6 +44,7 @@
   "devDependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "concurrently": "^9.1.2",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
