--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "db:fylker2023:docker": "npm run db:fylker2023:download && npm run db:docker < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:fylker2023:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
     "db:docker": "docker exec -i kws2100-kartbaserte-websystemer-skoleprosjektet-1 /usr/bin/psql --user postgres",
-    "prepare": "husky"
+    "prepare": "husky",
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
-    "download-cli": "^1.1.1"
+    "download-cli": "^1.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vite": "^6.2.3"
   }
 }
