--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "scripts": {
     "test": "tsc --noEmit && prettier --check .",
     "db:docker:prepare": "npm run db:docker < script/prepare-database.sql",
-    "db:heroku:prepare": "psql < script/prepare-database.sql",
-    "db:school:heroku": "npm run db:school:download && psql < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:heroku:prepare": "psql $DATABASE_URL < script/prepare-database.sql",
+    "db:school:heroku": "npm run db:school:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:school:docker": "npm run db:school:download && npm run db:docker < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:school:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
-    "db:fylker2023:heroku": "npm run db:fylker2023:download && psql < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
+    "db:fylker2023:heroku": "npm run db:fylker2023:download && psql $DATABASE_URL < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:fylker2023:docker": "npm run db:fylker2023:download && npm run db:docker < tmp/Basisdata_0000_Norge_25833_Fylker_PostGIS.sql",
     "db:fylker2023:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Fylker2023/PostGIS/Basisdata_0000_Norge_25833_Fylker2023_PostGIS.zip",
     "db:docker": "docker exec -i kws2100-kartbaserte-websystemer-skoleprosjektet-1 /usr/bin/psql --user postgres",
     "db:heroku": "npm run db:heroku:setup && npm db:school:heroku && npm db:fylker2023:heroku && npm run db:heroku:prepare",
-    "db:heroku:setup": "echo 'create extension postgis' | psql",
+    "db:heroku:setup": "echo 'create extension postgis' | psql $DATABASE_URL",
     "prepare": "husky",
     "dev": "vite",
     "build": "vite build",
