--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "start": "cd server && npm start"
   },
   "repository": {
     "type": "git",
