import grunnkretser and vegadresser into postgis

--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "prepare": "husky",
     "start": "cd server && npm start",
     "postinstall": "cd server && npm install --include=dev",
-    "db:schools": "npm run db:schools:download && npm run db:schools:import",
+    "db:data:dev": "npm run db:schools:dev && npm run db:grunnkrets:dev && npm run db:vegadresse:dev",
+    "db:psql:dev": "docker exec -i /postgis /usr/bin/psql --user postgres",
+    "db:schools:dev": "npm run db:schools:download && npm run db:psql:dev < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:schools:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Befolkning/Grunnskoler/PostGIS/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.zip",
-    "db:schools:import": "docker exec -i /postgis /usr/bin/psql --user postgres < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
     "db:schools:heroku": "npm run db:schools:download && psql $DATABASE_URL < tmp/Befolkning_0000_Norge_25833_Grunnskoler_PostGIS.sql",
+    "db:grunnkrets:dev": "npm run db:grunnkrets:download && npm run db:psql:dev < tmp/Basisdata_03_Oslo_25832_Grunnkretser_PostGIS.sql",
+    "db:grunnkrets:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/Grunnkretser/PostGIS/Basisdata_03_Oslo_25832_Grunnkretser_PostGIS.zip",
+    "db:grunnkrets:heroku": "npm run db:grunnkrets:download && psql $DATABASE_URL < tmp/Basisdata_03_Oslo_25832_Grunnkretser_PostGIS.sql",
+    "db:vegadresse:dev": "npm run db:vegadresse:download && npm run db:psql:dev < tmp/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.sql",
+    "db:vegadresse:download": "download --extract --out tmp/ https://nedlasting.geonorge.no/geonorge/Basisdata/MatrikkelenVegadresse/PostGIS/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.zip",
+    "db:vegadresse:heroku": "npm run db:vegadresse:download && psql $DATABASE_URL < tmp/Basisdata_03_Oslo_25832_MatrikkelenVegadresse_PostGIS.sql",
     "db:heroku:postgis": "echo 'create extension postgis' | psql $DATABASE_URL",
     "db:heroku": "npm run db:heroku:postgis && npm run db:schools:heroku"
   },
